[project]
name = "rerope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "gguf>=0.16.2",
    "hf-transfer>=0.1.9",
    "stable-diffusion-cpp-python>=0.2.7",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
]
